# BareOS_AppDevelopment

./: .gitignore  CMakeLists.txt  Makefile
kernel/: cli.c  def.c  font.c  framebf.c  game.c  game_be.c  game_fe.c  helper.c  image.c  kernel.c  math.c  maze.c  mbox.c  uart0.c  util_str.c  utils.c
lib/: cli.h  def.h  font.h  framebf.h  game.h  game_be.h  game_fe  game_fe.h  gpio.h  helper.h  image.h  kernel.h  math.h  mbox.h  uart0.h  util_str.h  utils.h
lib/data/: data_font.h  data_font2.h  data_menu_background.h  help_dialog.h
lib/data/game/: fov.h  game_menu.h  item.h  maze.h  maze_state.h  player.h  player_movement.h
lib/data/images/: sample_pic.h
